# transcribe

./: .gitattributes  .gitignore  2026-01-23 Plan.md  BUILD.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  TASKS.md  Transcribe Elevenlabs (YouTube Format).bat  YT Gemini 2.5 Pro Podcast Audio transcription - Colab.url  _ul  audio_transcribe.bat  audio_transcribe.py  audio_transcribe_assemblyai.bat  audio_transcribe_assemblyai.py  audio_transcribe_diarization.py  audio_transcribe_elevenlabs.py  audio_transcribe_elevenlabs_de.bat  audio_transcribe_groq.py  audio_transcribe_groq_de.bat  build.py  clean-transcripts.ps1  debug_aai.py  doc_build_fix_walkthrough.md  features.md  get_yt_transcript.bat  get_yt_transcript.py  go.mod  go.sum  groq_audio_chunking_adapted.py  join_srt_for_davinci.py  pause_bargraph.py  project_outline.md  pyproject.toml  (+11 more)
.claude/: settings.local.json
.claude/plans/: add-openai-tts-support.md  add-progress-indicators.md  audit-bug-fixes-and-refactors.md  audit-silent-compression-fallthrough.md  consolidate-openai-stt-models.md  fix-audio-extraction-and-temp-cleanup.md  fix-editor-env-var.md  fix-nul-files-from-hook.md  migrate-gemini-sdk.md  test-ctrlg-keybinding.md  two-level-force-flag-and-skip-feedback.md  ux-fixes-interactive-and-globs.md
.cursor/rules/: general-behaviour.mdc  project-structure.mdc  python-execution.mdc  python.mdc  task-list.mdc  windows-commands.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
_legacy/: Transcribe Elevenlabs (YouTube Format).bat  analyze_jsons.py  build.py  install.sh  pyproject.toml  test_all_apis.py  test_apis_force.bat  transcribe.py
_legacy/audio_transcribe/: __init__.py  cli.py
_legacy/python/: README.md
audio_transcribe/: __init__.py  cli.py
batch_templates/: Transcribe AssemblyAI.lnk  Transcribe Groq DE.lnk
docs/: engineering-guide.md  python-to-go-playbook.md  release-checklist.md  windows-installer.md
feature-sprints/: TASKS.md
installer/: transcribe.iss  versioninfo.tmpl.json
legacy/: audio_processing_original.py  audio_transcribe.bat  audio_transcribe_assemblyai.bat  audio_transcribe_elevenlabs.py  audio_transcribe_elevenlabs_youtube.bat  audio_transcribe_groq_de.bat  beta_audio_transcribe_diarization.py  debug_groq_chunking.bat  debug_groq_chunking.py  groq_audio_chunking_adapted.py  join_json_for_davinci.py  loguru_patch.py  pause_bargraph.py  test_api_outputs.py  voicerecorder.html  voicerecorder.py  whisper-to-srt.py
scripts/: build-installer.ps1  build.ps1  check-installer-prereqs.ps1  install-local.ps1  new-placeholder-icon.ps1  verify-installer-artifacts.ps1
test/: audio-test.json  audio-test.srt  audio-test.txt  audio-test_elevenlabs.json  audio-test_groq.json  combine_subtitles.py  expected-audio-test.json  expected-audio-test.srt
testdata/: assemblyai_sample.json  elevenlabs_diarize.json  elevenlabs_sample.json  gemini_sample.json  groq_sample.json  mistral_sample.json  openai_sample.json
tests/: conftest.py
transcribe_helpers/: audio_processing.py  chunking.py  output_formatters.py  text_processing.py  utils.py
utils/: formatters.py  parsers.py  transcription_api.py
(+374 files in other folders)
