[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-transcribe"
version = "0.4.4"
description = "Unified audio transcription tool supporting multiple APIs"
authors = [
    {name = "Audio Transcribe Team"}
]
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "av>=12.0.0",
    "click",
    "loguru",
    "pydub-ng",
    "python-dotenv",
    "requests",
    "assemblyai",
    "groq",
    "openai>=1.78.0",
    "google-generativeai>=0.8.0",
    "mistralai>=1.0.0",
    "questionary>=2.1.0",
    "rich>=14.2.0",
]
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pyinstaller",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "pytest-xdist>=3.5.0",
]

[project.scripts]
transcribe = "audio_transcribe.cli:main"

[tool.setuptools]
exclude-package-data = {"*" = ["desktop.ini"]}

[tool.setuptools.packages.find]
where = ["."]
include = ["audio_transcribe*"]

[tool.pyinstaller]
hiddenimports = [
    "loguru",
    "assemblyai",
    "groq",
    "python-dotenv",
    "requests",
    "pydub",
    "google.generativeai",
    "mistralai"
]
